# spookys-automod-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  ConditionApiTest.cs  ConditionApiTest.csproj  Directory.Build.props  README.md  RELEASE.md  SpookysAutomod.sln  test-condition-api.csx  test-conditions.csx  test-original-script.pex  test-updated-result.pex
.claude/skills/skyrim-archive/: SKILL.md  skill.md
.claude/skills/skyrim-audio/: SKILL.md
.claude/skills/skyrim-esp/: SKILL.md  skill.md
.claude/skills/skyrim-mcm/: SKILL.md
.claude/skills/skyrim-nif/: SKILL.md
.claude/skills/skyrim-papyrus/: SKILL.md
.claude/skills/skyrim-skse/: SKILL.md  skill.md
additional-files/meshes/test/: armor.nif
additional-files/textures/test/: armor.dds
docs/: BUG_FIXES_v1.7.0.md  DOCUMENTATION_UPDATE_SUMMARY_v1.7.0.md  MUTAGEN_CONDITIONS_API.md  README.md  TEST_RESULTS_v1.7.0.md  USER_FEEDBACK_RESOLUTION_v1.7.0.md  archive.md  audio.md  esp.md  llm-guide.md  llm-init-prompt.md  mcm.md  nif.md  papyrus.md  skse.md
docs/research/: CONDITION_API_RESEARCH_SUMMARY.md  CONDITION_IMPLEMENTATION_SNIPPETS.cs  CONDITION_QUICK_REFERENCE.md
patch-archive/scripts/: PatchScript.pex
scripts/: README.md  build-release.ps1  build-release.sh
skyrim-script-headers/: README.md
src/SpookysAutomod.Archive/: SpookysAutomod.Archive.csproj
src/SpookysAutomod.Archive/CliWrappers/: BsarchWrapper.cs
src/SpookysAutomod.Archive/Services/: ArchiveService.cs
src/SpookysAutomod.Audio/: SpookysAutomod.Audio.csproj
src/SpookysAutomod.Audio/Services/: AudioService.cs
src/SpookysAutomod.Cli/: Program.cs  SpookysAutomod.Cli.csproj
src/SpookysAutomod.Cli/Commands/: ArchiveCommands.cs  AudioCommands.cs  EspAnalysisCommands.cs  EspCommands.cs  EspPluginCommands.cs  EspRecordCommands.cs  EspScriptCommands.cs  McmCommands.cs  NifCommands.cs  PapyrusCommands.cs  SkseCommands.cs
src/SpookysAutomod.Core/: SpookysAutomod.Core.csproj
src/SpookysAutomod.Core/Interfaces/: ICliWrapper.cs
src/SpookysAutomod.Core/Logging/: IModLogger.cs
src/SpookysAutomod.Core/Models/: BatchOverrideResult.cs  ConditionInfo.cs  ConflictReport.cs  ConflictingPlugin.cs  FieldDifference.cs  GameEnvironment.cs  PluginInfo.cs  RecordComparison.cs  RecordInfo.cs  RecordSearchResult.cs  Result.cs
src/SpookysAutomod.Esp/: SpookysAutomod.Esp.csproj
src/SpookysAutomod.Esp/Builders/: ArmorBuilder.cs  BookBuilder.cs  EncounterZoneBuilder.cs  FormListBuilder.cs  GlobalBuilder.cs  LeveledItemBuilder.cs  LocationBuilder.cs  NpcBuilder.cs  OutfitBuilder.cs  PerkBuilder.cs  QuestBuilder.cs  SpellBuilder.cs  WeaponBuilder.cs
src/SpookysAutomod.Esp/Research/: ConditionApiExplorer.cs  ConditionExamples.cs  ConditionResearch.cs
src/SpookysAutomod.Esp/Services/: AliasService.cs  AliasTypeExplorer.cs  AutoFillService.cs  BulkAutoFillService.cs  LinkCacheManager.cs  PluginService.cs  ScriptPropertyService.cs  TypeInspectionService.cs
src/SpookysAutomod.Mcm/: SpookysAutomod.Mcm.csproj
src/SpookysAutomod.Mcm/Builders/: McmBuilder.cs
src/SpookysAutomod.Mcm/Models/: McmConfig.cs
src/SpookysAutomod.Mcm/Services/: McmService.cs
src/SpookysAutomod.Nif/: SpookysAutomod.Nif.csproj
src/SpookysAutomod.Nif/Services/: NifService.cs
src/SpookysAutomod.Papyrus/: SpookysAutomod.Papyrus.csproj
src/SpookysAutomod.Papyrus/CliWrappers/: ChampollionWrapper.cs  PapyrusCompilerWrapper.cs  ToolDownloader.cs
src/SpookysAutomod.Papyrus/Services/: PapyrusService.cs
src/SpookysAutomod.Papyrus/Templates/: ScriptTemplateGenerator.cs
src/SpookysAutomod.Skse/: SpookysAutomod.Skse.csproj
src/SpookysAutomod.Skse/Models/: SkseProjectConfig.cs
src/SpookysAutomod.Skse/Services/: SkseProjectService.cs
templates/skse/basic/: CMakeLists.txt  README.md  build.bat
templates/skse/basic/src/: PCH.h  main.cpp  main.cpp.old
templates/skse/papyrus-native/: CMakeLists.txt  vcpkg.json
templates/skse/papyrus-native/src/: main.cpp  papyrus.cpp  papyrus.h  plugin.cpp  plugin.h
test-archive-data/meshes/test/: weapon.nif
test-archive-data/textures/test/: weapon.dds
tests/SpookysAutomod.Tests/: SpookysAutomod.Tests.csproj
tests/SpookysAutomod.Tests/Archive/: ArchiveServiceTests.cs
tests/SpookysAutomod.Tests/Core/: ResultTests.cs
tests/SpookysAutomod.Tests/Esp/: BuilderTests.cs  PluginServiceTests.cs
